--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "axios": "^1.4.0",
     "chakra-ui-search": "^1.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
