--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,11 @@ aniso8601==9.0.1
 attrs==23.1.0
 blinker==1.6.2
 certifi==2023.5.7
+charset-normalizer==3.2.0
 click==8.1.3
 exceptiongroup==1.1.2
 Flask==2.3.2
+Flask-Cors==4.0.0
 Flask-RESTful==0.3.10
 h11==0.14.0
 idna==3.4
@@ -17,6 +19,7 @@ pandas==2.0.3
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3
+requests==2.31.0
 selenium==4.10.0
 six==1.16.0
 sniffio==1.3.0
@@ -25,5 +28,6 @@ trio==0.22.1
 trio-websocket==0.10.3
 tzdata==2023.3
 urllib3==2.0.3
+websockets==11.0.3
 Werkzeug==2.3.6
 wsproto==1.2.0
